added all(?) programming languages

--- a/index.html
+++ b/index.html
@@ -1,22 +1,74 @@
 <html>
-    <header>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="js/logic.js"></script>
-        <link rel="stylesheet" href="css/main.css"></link>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-    </header>
-    <body>
-        <div id="upper-bar">
-            <div id="right-name">Yori Garcia Rosario - Software Engineer</div>
-            <div id="menu-link-group">
-                    <div>About me</div>
-                    <div>Kanji Shoubu</div>
-                    <div>Attack Defend</div>
+<header>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/logic.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    </link>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+</header>
+
+<body>
+    <div id="upper-bar">
+        <div id="right-name">Yori Garcia Rosario - Software Engineer</div>
+        <div id="menu-link-group">
+            <div>About me</div>
+            <div>Kanji Shoubu</div>
+            <div>Attack Defend</div>
+        </div>
+        <ul id="logo-list">
+            <li>
+                <a target="_blank" href="https://github.com/Yori1">
+                    <img id="github-logo" class="logo" src="images/github-logo.png">
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.linkedin.com/in/yori-garcia-rosario-b5021b135/">
+                    <img id="linkedin-logo" class="logo" src="images/linkedin-logo.png">
+                </a>
+
+            </li>
+
+        </ul>
+    </div>
+    <div id="content" class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="header">Hey, I'm Yori</div>
+                <div id="introduction">
+                    <p>
+                        I'm a Dutch student at Fontys University of Applied Sciences where I'm currently studying Software
+                        Engineering and
+                        Smart Mobile.
+                    </p>
+                    <p>
+                        I'm very passionate about building software that the user wants, and I'm always
+                        trying to follow the newest best coding practices. I have experience making desktop
+                        applications, webapplications (both frontend and backend), mobile applications and JSON APIs.
+                    </p>
+                    <p>
+                        When I'm not working on software, I like playing video games, exercising or learning Japanese.
+                    </p>
+                </div>
+                <div class="sub-title">Some languages I like working with</div>
+            </div>
+            <div class="col-md-3">
+                <img id="picture" src="images/picture.png" />
             </div>
         </div>
-        <div id="content" class="container">
-            <div class="header">Hey, I'm Yori</div>
-        </div>
-    </body>
+        <div class="separator"></div>
+        <div id="programming-languages">
+            <img src="images/programming-languages/c-sharp-logo.png">
+            <img src="images/programming-languages/java-logo.png">
+            <img src="images/programming-languages/javascript-logo.png">
+            <img src="images/programming-languages/css-logo.png">
+            <img src="images/programming-languages/html-logo.png">
+            <img src="images/programming-languages/typescript-logo.png">
+            <img src="images/programming-languages/mysql-logo.png">
+            <img src="images/programming-languages/sql-server-logo.png">
+        <div>
+    </div>
+</body>
+
 </html>
