fixed bootstrap row issue

--- a/index.html
+++ b/index.html
@@ -51,12 +51,31 @@
                         When I'm not working on software, I like playing video games, exercising or learning Japanese.
                     </p>
                 </div>
-                <div class="sub-title">Some languages I like working with</div>
+                
             </div>
             <div class="col-md-3">
                 <img id="picture" src="images/picture.png" />
             </div>
         </div>
+        <div class="separator"></div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="sub-title">Kanji Shoubu</div>
+                <p>
+                    Kanji Shoubu is a webapp built with Spring Boot and MySQL. It's an application that allows logged in users to view a list
+                    of all online users, and challenge one of the users to a game of trying to read Japanese sentences.
+                    When the challenge has been accepted, both players try to correctly read the same sequence of sentences. The user guesses the reading
+                    by typing in the reading in either alphabet characters or Japanese characters, and is then shown the next sentence.
+                    At the end, the player with the largest amount of correct readings wins, if that's the same the fastest player wins.
+                    This is all accomplished using Spring Boot websocket connections combined with StompJS.
+                </p>
+            </div>
+            <div class="col-md-8">
+
+            </div>
+        </div>
+
+        <div class="sub-title">Some skills that I got to apply with this project</div>
         <div class="separator"></div>
         <div id="programming-languages">
             <img src="images/programming-languages/c-sharp-logo.png">
