--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/logic.js"></script>
     <link rel="stylesheet" href="css/main.css">
@@ -38,7 +40,8 @@
                 <div class="header">Hey, I'm Yori</div>
                 <div id="introduction">
                     <p>
-                        I'm a Dutch student at Fontys University of Applied Sciences where I'm currently studying Software
+                        I'm a Dutch student at Fontys University of Applied Sciences where I'm currently studying
+                        Software
                         Engineering and
                         Smart Mobile.
                     </p>
@@ -51,7 +54,7 @@
                         When I'm not working on software, I like playing video games, exercising or learning Japanese.
                     </p>
                 </div>
-                
+
             </div>
             <div class="col-md-3">
                 <img id="picture" src="images/picture.png" />
@@ -62,12 +65,19 @@
             <div class="col-md-4">
                 <div class="sub-title">Kanji Shoubu</div>
                 <p>
-                    Kanji Shoubu is a webapp built with Spring Boot and MySQL. It's an application that allows logged in users to view a list
+                    Kanji Shoubu is a webapp built with Spring Boot and MySQL. It's an application that allows logged in
+                    users to view a list
                     of all online users, and challenge one of the users to a game of trying to read Japanese sentences.
-                    When the challenge has been accepted, both players try to correctly read the same sequence of sentences. The user guesses the reading
-                    by typing in the reading in either alphabet characters or Japanese characters, and is then shown the next sentence.
-                    At the end, the player with the largest amount of correct readings wins, if that's the same the fastest player wins.
+                    When the challenge has been accepted, both players try to correctly read the same sequence of
+                    sentences. The user guesses the reading
+                    by typing in the reading in either alphabet characters or Japanese characters, and is then shown the
+                    next sentence.
+                    At the end, the player with the largest amount of correct readings wins, if that's the same the
+                    fastest player wins.
                     This is all accomplished using Spring Boot websocket connections combined with StompJS.
+                </p>
+                <p>
+                    <i>Under construction</i>
                 </p>
             </div>
             <div class="col-md-8">
@@ -76,7 +86,6 @@
         </div>
 
         <div class="sub-title">Some skills that I got to apply with this project</div>
-        <div class="separator"></div>
         <div id="programming-languages">
             <img src="images/programming-languages/c-sharp-logo.png">
             <img src="images/programming-languages/java-logo.png">
@@ -86,8 +95,8 @@
             <img src="images/programming-languages/typescript-logo.png">
             <img src="images/programming-languages/mysql-logo.png">
             <img src="images/programming-languages/sql-server-logo.png">
-        <div>
-    </div>
+            <div>
+            </div>
 </body>
 
 </html>
